# Simulation

./: .gitattributes  .gitignore  Finken-Sim-Analysis.ipynb  README.md  finkenWalls.lua  finkenplugin.o.d  run.sh  setup.sh  test.cpp
Doc/: doc.tex
FinkenBehaviour/: .finken.cpp.swo  .finkencontrol.cpp.swo  .finkenplugin.cpp.swo  Doxyfile  FinkenBehaviour.pro  Makefile  attitudeSensor.cpp  attitudeSensor.h  attitudesensor.cpp  attitudesensor.h  finken.cpp  finken.h  finkencontrol.cpp  finkencontrol.h  finkenplugin.cpp  finkenplugin.o.d  heightSensor.cpp  heightSensor.h  heightsensor.cpp  heightsensor.h  log.h  main.cpp  plugin.mk  positionsensor.cpp  positionsensor.h  rotor.cpp  rotor.h  sensor.cpp  sensor.h  server.cpp  simtestdummy.cpp  simtestdummy.h  skeleton.cpp  sonar.cpp  sonar.h  threadSync.cpp  vrepplugin.cpp  vrepplugin.h
Java Workspace/: .gitignore
coppeliaPlugin/: .gitignore  CMakeLists.txt  accelerometer.cpp  accelerometer.h  attitudesensor.cpp  attitudesensor.h  callbacks.xml  cleanupProcesses.sh  finken.cpp  finken.h  finkenplugin.cpp  heightsensor.cpp  heightsensor.h  log.h  positionsensor.cpp  positionsensor.h  rotor.cpp  rotor.h  sensor.cpp  sensor.h  simFinken.lua  sonar.cpp  sonar.h  test.cpp
coppeliaPlugin/scenes/: PaparazziControlledSingle.simscene.xml
currently_unused_but_maybe_useful_later/: .threadSync.cpp.swp  threadSync.cpp
documentation/: Thumbs.db  presentation_final.pptx  vrep_conf.xml
finken_control/: LocalMap.lua  finkenSwarmGradient.lua  finken_localMapGradient.lua  finken_simpleGradient.lua  finken_simpleGradient_localMap.lua  (+7 more)
(+2178 files in other folders)
